--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-project-main-forms/recovery-plan/recovery-plan.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-project-main-forms/recovery-plan/recovery-plan.component.scss
@@ -6,6 +6,10 @@ mat-form-field {
   margin: 0 0 5px !important;
 }
 
+mat-label{
+  font-size: 15px;
+}
+
 /*::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-thick {
   color: green;
 }
