EMCRI # 827Portal DEV (NTT): Can't view DFA provided data on submitted project - Updated new fields on  Entities , mappers - Added new fields to the project review screen - Updated recovert paln component and HTML

--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/review-project/review-project.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/review-project/review-project.component.html
@@ -10,13 +10,13 @@
       <!-- Project Details -->
       <mat-card-content class="contentStyle mat-elevation-z8">
         <div class="row info-detail" style="padding-top: 20px;">
-          <div class="col-md-3"><span [ngClass]="{'missing-info': !(formCreationService.recoveryPlanForm$ | async)?.value?.projectNumber || (formCreationService.recoveryPlanForm$ | async)?.controls?.projectNumber.invalid}">Project Number:</span></div>
+          <div class="col-md-3"><span [ngClass]="{'missing-info': !(formCreationService.recoveryPlanForm$ | async)?.value?.projectApprovedDate|| (formCreationService.recoveryPlanForm$ | async)?.controls?.projectApprovedDate.invalid}">Project Approved Date:</span></div>
           <div class="col-md-3">
-            <span [ngClass]="{'missing-info': !(formCreationService.recoveryPlanForm$ | async)?.value?.projectNumber || (formCreationService.recoveryPlanForm$ | async)?.controls?.projectNumber.invalid}">
+            <span [ngClass]="{'missing-info': !(formCreationService.recoveryPlanForm$ | async)?.value?.projectApprovedDate|| (formCreationService.recoveryPlanForm$ | async)?.controls?.projectApprovedDate.invalid}">
               {{
                 (formCreationService.recoveryPlanForm$ | async)?.value
-                  .projectNumber ? (formCreationService.recoveryPlanForm$ | async)?.value
-                  .projectNumber : "Enter required information"
+                  .projectApprovedDate ? (formCreationService.recoveryPlanForm$ | async)?.value
+                  .projectApprovedDate : "Enter required information"
               }}
             </span>
           </div>
@@ -32,6 +32,111 @@
               <!-- 2024-08-26 EMCRI-617 waynezen; UI fixes for Angular upgrade -->
             </button>
           </div>
+        </div>
+
+        <div class="row info-detail" style="padding-top: 20px;">
+          <div class="col-md-3"><span [ngClass]="{'missing-info': !(formCreationService.recoveryPlanForm$ | async)?.value?.project18MonthDeadline || (formCreationService.recoveryPlanForm$ | async)?.controls?.project18MonthDeadline.invalid}">18 Month Deadline:</span></div>
+          <div class="col-md-3">
+            <span [ngClass]="{'missing-info': !(formCreationService.recoveryPlanForm$ | async)?.value?.project18MonthDeadline|| (formCreationService.recoveryPlanForm$ | async)?.controls?.project18MonthDeadline.invalid}">
+              {{
+                (formCreationService.recoveryPlanForm$ | async)?.value
+                  .project18MonthDeadline ? (formCreationService.recoveryPlanForm$ | async)?.value
+                  .project18MonthDeadline : "Enter required information"
+              }}
+            </span>
+          </div>
+        </div>
+
+        <div class="row info-detail" style="padding-top: 20px;">
+          <div class="col-md-3"><span [ngClass]="{'missing-info': !(formCreationService.recoveryPlanForm$ | async)?.value?.approvedCost || (formCreationService.recoveryPlanForm$ | async)?.controls?.approvedCost.invalid}">Approved Project Cost:</span></div>
+          <div class="col-md-3">
+            <span [ngClass]="{'missing-info': !(formCreationService.recoveryPlanForm$ | async)?.value?.approvedCost || (formCreationService.recoveryPlanForm$ | async)?.controls?.approvedCost.invalid}">
+              {{
+                (formCreationService.recoveryPlanForm$ | async)?.value
+                  .approvedCost ? (formCreationService.recoveryPlanForm$ | async)?.value
+                  .approvedCost : "Enter required information"
+              }}
+            </span>
+          </div>
+        </div>
+
+        <div class="row info-detail" style="padding-top: 20px;">
+          <div class="col-md-3"><span [ngClass]="{'missing-info': !(formCreationService.recoveryPlanForm$ | async)?.value?.approvedAmendedProjectCost || (formCreationService.recoveryPlanForm$ | async)?.controls?.approvedAmendedProjectCost.invalid}">Approved Amended Project Cost:</span></div>
+          <div class="col-md-3">
+            <span [ngClass]="{'missing-info': !(formCreationService.recoveryPlanForm$ | async)?.value?.approvedAmendedProjectCost || (formCreationService.recoveryPlanForm$ | async)?.controls?.approvedAmendedProjectCost.invalid}">
+              {{
+                (formCreationService.recoveryPlanForm$ | async)?.value
+                  .approvedAmendedProjectCost ? (formCreationService.recoveryPlanForm$ | async)?.value
+                  .approvedAmendedProjectCost : "Enter required information"
+              }}
+            </span>
+          </div>
+        </div>
+
+        <div class="row info-detail" style="padding-top: 20px;">
+          <div class="col-md-3"><span [ngClass]="{'missing-info': !(formCreationService.recoveryPlanForm$ | async)?.value?.claimTotal || (formCreationService.recoveryPlanForm$ | async)?.controls?.claimTotal.invalid}">Project Claim Total:</span></div>
+          <div class="col-md-3">
+            <span [ngClass]="{'missing-info': !(formCreationService.recoveryPlanForm$ | async)?.value?.claimTotal || (formCreationService.recoveryPlanForm$ | async)?.controls?.claimTotal.invalid}">
+              {{
+                (formCreationService.recoveryPlanForm$ | async)?.value
+                  .claimTotal ? (formCreationService.recoveryPlanForm$ | async)?.value
+                  .claimTotal : "Enter required information"
+              }}
+            </span>
+          </div>
+        </div>
+
+        <div class="row info-detail" style="padding-top: 20px;">
+          <div class="col-md-3"><span [ngClass]="{'missing-info': !(formCreationService.recoveryPlanForm$ | async)?.value?.approvedTotal || (formCreationService.recoveryPlanForm$ | async)?.controls?.approvedTotal.invalid}">Project Approved Claim Total:</span></div>
+          <div class="col-md-3">
+            <span [ngClass]="{'missing-info': !(formCreationService.recoveryPlanForm$ | async)?.value?.approvedTotal || (formCreationService.recoveryPlanForm$ | async)?.controls?.approvedTotal.invalid}">
+              {{
+                (formCreationService.recoveryPlanForm$ | async)?.value
+                  .approvedTotal ? (formCreationService.recoveryPlanForm$ | async)?.value
+                  .approvedTotal : "Enter required information"
+              }}
+            </span>
+          </div>
+        </div>
+
+        <div class="row info-detail" style="padding-top: 20px;">
+          <div class="col-md-3"><span [ngClass]="{'missing-info': !(formCreationService.recoveryPlanForm$ | async)?.value?.paidProjectAmount || (formCreationService.recoveryPlanForm$ | async)?.controls?.paidProjectAmount.invalid}">Paid Project Amount:</span></div>
+          <div class="col-md-3">
+            <span [ngClass]="{'missing-info': !(formCreationService.recoveryPlanForm$ | async)?.value?.paidProjectAmount || (formCreationService.recoveryPlanForm$ | async)?.controls?.paidProjectAmount.invalid}">
+              {{
+                (formCreationService.recoveryPlanForm$ | async)?.value
+                  .paidProjectAmount ? (formCreationService.recoveryPlanForm$ | async)?.value
+                  .paidProjectAmount : "Enter required information"
+              }}
+            </span>
+          </div>
+        </div>
+
+        <div class="row info-detail" style="padding-top: 20px;">
+          <div class="col-md-3"><span [ngClass]="{'missing-info': !(formCreationService.recoveryPlanForm$ | async)?.value?.emcrapprovalcomments || (formCreationService.recoveryPlanForm$ | async)?.controls?.emcrapprovalcomments.invalid}">EMCR Decision Comments:</span></div>
+          <div class="col-md-3">
+            <span [ngClass]="{'missing-info': !(formCreationService.recoveryPlanForm$ | async)?.value?.emcrapprovalcomments || (formCreationService.recoveryPlanForm$ | async)?.controls?.emcrapprovalcomments.invalid}">
+              {{
+                (formCreationService.recoveryPlanForm$ | async)?.value
+                  .emcrapprovalcomments ? (formCreationService.recoveryPlanForm$ | async)?.value
+                  .emcrapprovalcomments : "Enter required information"
+              }}
+            </span>
+          </div>
+        </div>
+
+        <div class="row info-detail" style="padding-top: 20px;">
+          <div class="col-md-3"><span [ngClass]="{'missing-info': !(formCreationService.recoveryPlanForm$ | async)?.value?.projectNumber || (formCreationService.recoveryPlanForm$ | async)?.controls?.projectNumber.invalid}">Project Number:</span></div>
+          <div class="col-md-3">
+            <span [ngClass]="{'missing-info': !(formCreationService.recoveryPlanForm$ | async)?.value?.projectNumber || (formCreationService.recoveryPlanForm$ | async)?.controls?.projectNumber.invalid}">
+              {{
+                (formCreationService.recoveryPlanForm$ | async)?.value
+                  .projectNumber ? (formCreationService.recoveryPlanForm$ | async)?.value
+                  .projectNumber : "Enter required information"
+              }}
+            </span>
+          </div>
+  
         </div>
 
         <div class="row info-detail">
