EMCRI # 992 and EMCRI 1002 Portal: Required Fields Not Displaying on the Claim Submission Stage - Added Total being claimed , Claim total, Claim Eligible GST to review  claim page and recovery Claims page

--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/review-claim/review-claim.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/review-claim/review-claim.component.html
@@ -121,6 +121,30 @@
             </span>
           </div>
         </div>
+
+        <div class="row info-detail">
+          <div class="col-md-3"><span>Claim Eligible GST:</span></div>
+          <div class="col-md-3">
+            <span>
+              $&nbsp;{{
+                recoveryPlanFormAbstract
+                  .eligibleGST| number : '1.2-2'
+              }}
+            </span>
+          </div>
+        </div>
+
+        <div class="row info-detail">
+          <div class="col-md-3"><span>Claim Total:</span></div>
+          <div class="col-md-3">
+            <span>
+              $&nbsp;{{
+                recoveryPlanFormAbstract
+                  .claimTotal	 | number : '1.2-2'
+              }}
+            </span>
+          </div>
+        </div>
         
         
       </mat-card-content>
