EMCRI # 395 Portal DEV: Update language to "Indigenous Governing Bodies and Local Authorities" - Adjusted the wordings on the dashboard page

--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dashboard/dashboard.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dashboard/dashboard.component.html
@@ -29,7 +29,7 @@
         <div class="material-icons infoIconStyle">info</div>
       </div>
       <div class="col-md-11 page-subheadbold">
-        This page is for Indigenous communities or local governments.
+        This page is for Indigenous Governing Bodies and Local Authorities.
       </div>
     </div>
     <div class="row">
