EMCRI # 1001 Portal: Submit Claim Button Incorrectly Visible After Project Closure in Closed Tab - Aded logic to hide the claims button when the project is closed

--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/project-dashboard-components/project/project.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/project-dashboard-components/project/project.component.html
@@ -119,7 +119,8 @@
           
               View Amendment
             </button>
-            <button
+           @if(applItem.status != 'Closed') {
+              <button
               class="application-button"
               (click)="ViewClaims(applItem)"
               type="button"
@@ -128,6 +129,8 @@
 
               Submit Claims
             </button>
+            }
+           
             <button
               class="application-button"
               type="button"
