Add conditional to prevent env banner in production (#735)

--- a/dfa/src/UI/embc-dfa/src/app/app.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/app.component.html
@@ -4,7 +4,7 @@
     (closeEvent)="closeOutageBanner($event)"
   ></app-outage-banner>
 
-  <app-environment-banner *ngIf="environment" [environment]="environment"></app-environment-banner>
+  <app-environment-banner *ngIf="environment?.envName !== 'prod'" [environment]="environment"></app-environment-banner>
 
   <app-header
     [ngStyle]="
